--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>ES6 入门导学</title>
+    <title>ES6学习笔记（一）</title>
   </head>
   <body>
-    <h1>h33</h1>
+    <h1>test</h1>
   </body>
 </html>
